NOCC 1.1    ?? ??, 2006

    * Use standardized RSS icon (Arnaud Boudou).

NOCC 1.0    January 01, 2006

    * Clean PHP code (Arnaud Boudou).
    * Fix issues with attachment downloading (Arnaud Boudou).
    * Update Italian translation (daiceman, patch #1369275).
    * Doesn't display link to contacts list if $conf->prefs_dir is empty (Arnaud
      Boudou).
    * Fix Javascript issues (Arnaud Boudou).
    * Updated german translation (strongbows, patch #1353859).
    * Render images embedded within HTML emails (Arnaud Boudou, patch #501449).
    * Add option to automatically choose mail domain to use with HTTP host
      (Edwin Meester, patch #1268985).
    * Sort IMAP folder names (Arnaud Boudou, bug #1351980).
    * Add Japanese language file (Tadashi Jokagi, patch #1349062).
    * Encrypt session stored passwords (Arnaud Boudou & Olivier Jourdat,
      RFE #811901, bug #1348164).
    * Improve RSS feed with subfolders (Arnaud Boudou).
    * Add compatibility with PHP 5.0.5 (Arnaud Boudou, bug #1291160).
    * Fix issue with message wrapping (Arnaud Boudou).
    * Add "To" header into mail list view (Arnaud Boudou, RFE #494191).
    * Add Catalan language file (David Gimeno i Ayuso).
    * Use PNG image files instead of GIF (Arnaud Boudou).
    * Add possibility to go back to previous page in case of unrecoverable 
      error (Arnaud Boudou).
    * NOCC is now XTHML 1.1 Strict compliant (Arnaud Boudou).
    * Improved CSS customization (Arnaud Boudou).
    * Sent Folder can now be setup by user and is no more a global option
      (Arnaud Boudou).
    * Enforce $conf->crlf option in order to avoid mixed "\r\n" and "\n" line
      break (Arnaud Boudou, bug #1228430).
    * Added option to select the character to use for login<char>domain login
      style (Arnaud Boudou).
    * Fix french translation (Arnaud Boudou).
    * Fix issue with use of user's reply leading (Arnaud Boudou).
    * Fix issue where allow_reply_leading configuration property was not taken